--- a/sass/styles/pink.sass
+++ b/sass/styles/pink.sass
@@ -1,8 +1,21 @@
-$accent: #d554da
+@import "../mixins"
 
-$button: hue-rotate(200deg) brightness(0.8) saturate(2)
-$others: hue-rotate(250deg) brightness(0.7) saturate(2)
-$lights: sepia(0.5) hue-rotate(250deg) saturate(3)
-$grayed: sepia(1) hue-rotate(250deg) saturate(4)
+$color: #ca5dc8
+$shift: 200deg
 
-@import 'style'
+%tint-vote
+	@include tint($shift, 2, 0.8)
+
+%tint-back
+	@include shift($shift + 80deg, 3)
+
+%shift-main
+	@include recolor($shift + 50deg, 3, 0.55)
+
+%shift-invert
+	@include recolor($shift + 50deg, 3, 0.55, 1)
+
+%shift-mute
+	@include recolor($shift + 70deg, 1.5, 0.4)
+
+@import "base/style"
