--- a/turnStyles.sass
+++ b/turnStyles.sass
@@ -1,4 +1,7 @@
-@import "sass/core/reset"
-@import "sass/core/panel"
-@import "sass/core/volume"
-@import "sass/core/hidden"
+// the core styles
+
+@import "sass/mixins"
+@import "sass/global/global"
+@import "sass/global/volume"
+@import "sass/global/toggle"
+@import "sass/global/panels"
