--- a/sass/themes/base/_content.sass
+++ b/sass/themes/base/_content.sass
@@ -1,121 +1,52 @@
 body,
-#songs,
-.tab-pane,
-.song-list,
-.guest-list
-  @extend %content-main
+.tab-pane
+	@extend .ts-content
+
+	#pmWindows a,
+	.tabbed-panel a,
+	#topBG #content a
+		&, &:hover, &:visited
+			color: $main
+			text-decoration: none
+			border-bottom: 1px dotted
+		&:hover
+			filter: brightness(1.2)
 
 .queue-message,
 .default-message
-  color: $color-subtle
-  text-shadow: none
+	color: $text-alt
+	text-shadow: none
 
-#overlay a,
-#pmWindows a,
-.tabbed-panel a,
-#topBG #content a
-  border-bottom: 1px dotted
-  text-decoration: none !important
+// background lights
+#room-view > canvas:nth-child(2)
+  @extend .ts-tint-back
 
-  &:hover
-    border-bottom-style: solid
+// voting buttons
+.board .lame-button
+  filter: grayscale(1)
 
-.become-dj, .invite-dj
-  color: $color-bg-0
+.board .awesome-button
+  @extend .ts-tint-vote
 
-// striped lists
-.chat .message:nth-child(even),
-.guest-list      > :nth-child(even):not(.separator),
-.striped-list    > :nth-child(even):not(.separator),
-.song-list > ul  > :nth-child(even):not(.separator),
-.message-history > :nth-child(even):not(.separator),
-.conversations-list>ul>:nth-child(even):not(.separator)
-  @extend %content-main
-  border-color: $color-bg-1
+.become-dj,
+.invite-dj
+	border: none
+	color: $base-inset
+	box-shadow: none
 
-.chat .message:nth-child(odd),
-.guest-list      > :nth-child(odd):not(.separator),
-.striped-list    > :nth-child(odd):not(.separator),
-.song-list > ul  > :nth-child(odd):not(.separator),
-.message-history > :nth-child(odd):not(.separator),
-.conversations-list>ul>:nth-child(odd):not(.separator)
-  @extend %content-alt
-  border-color: $color-bg-1
+	&:hover
+		filter: brightness(1.2)
 
-.guest-list>:nth-child(odd):not(.separator):not(.no-hover):hover,
-.guest-list>:nth-child(even):not(.separator):not(.no-hover):hover,
-.striped-list>:nth-child(odd):not(.separator):not(.no-hover):hover, 
-.striped-list>:nth-child(even):not(.separator):not(.no-hover):hover, 
-.song-list>ul>:nth-child(odd):not(.separator):not(.no-hover):hover,
-.song-list>ul>:nth-child(even):not(.separator):not(.no-hover):hover,
-.message-history>:nth-child(odd):not(.separator):not(.no-hover):hover,
-.message-history>:nth-child(even):not(.separator):not(.no-hover):hover,
-.conversations-list>ul>:nth-child(odd):not(.separator):not(.no-hover):hover,
-.conversations-list>ul>:nth-child(even):not(.separator):not(.no-hover):hover
-  background-color: $color-bg-3
+	&, &:hover
+		@extend .ts-gradient
 
-// popped panels
-.sliding-nav 
-  .sliding-nav-pane-header
-    @extend %bg-gradient
-
-  .sliding-nav-pane-title
-    color: $color-text
-    text-shadow: none
-
-  button.sliding-nav-pane-back.back
-    width: 41px
-    outline: none
-    background: none
-    &::after
-      left: 0px
-      top: -9px
-      content: "✖"
-      display: block
-      text-indent: 0
-      font-size: 1.3em
-      font-weight: bold
-      position: relative
-      color: $color-bg-0
-
-.song-list .separator,
-.sliding-nav .separator
-  text-shadow: none
-  color: $color-text
-  @extend %bg-gradient
-
-
-// input panels
-.floating-panel-bar,
-.floating-panel-header
-  @extend %bg-gradient
-
-  .divider
-    display: none
-
-// text inputs
-#chat-input,
-.message-input,
-#song-search-input,
-.overlay input.text,
-.room-search-input input,
-.overlay textarea.textarea
-  color: $color-text
-  background: $color-bg
-  border-color: transparent
-  box-shadow: inset 0 0 0 1px $color-bg-0, 0 1px 0 0 $color-bg-3
-
-  &::placeholder
-    color: $color-subtle
+	&:before, &:after
+		display: none
 
 // miniplayer
 #mainNav li:not(.selected) .nav-text,
 #subNav li:not(.selected) .subnav-text
-  color: $color-subtle !important
-
-#subNav li.selected,
-#mainNav li.selected
-  background: $color-bg-1 !important
+  color: $text-alt !important
 
 .mini-room-view
   background-color: transparent !important
@@ -128,11 +59,34 @@ body,
 .song-playing .songboard-progress-bar
   bottom: -59px
 
+// continue to room
+#readybox
+	@extend .ts-content
+
+	img[src*="arrow"]
+		@extend .ts-shift-main
+	
+	h2
+		color: $text
+		+ div
+			color: $text-alt
+	
+	.btn
+		color: $base-inset
+		@extend .ts-gradient
+	
+	.charity-btn
+		background: $base-inset
+		border: 1px solid $base-faded
+		a
+			color: $text-alt
+
+// scrollbar
 ::-webkit-scrollbar
   width: 7px
 ::-webkit-scrollbar-track
-  background: $color-bg
+  background: $base-inset
 ::-webkit-scrollbar-thumb
-  background: $color-bg-2
+  background: $base-hover
 ::-webkit-scrollbar-thumb:hover
-  background: $color-subtle
+  background: $text-alt
