--- a/sass/themes/base/_header.sass
+++ b/sass/themes/base/_header.sass
@@ -1,41 +1,112 @@
-.header-bar,
-.tab-item:not(.selected)
-  @extend %content-main
+div#header,
+.header-bar
+	@extend .ts-content
 
-.header-room-name
-  font-weight: bold
-  color: $color-text
+#tsMute, 
+.header-search,
+.settings-button,
+.header-logo, .logo,
+.header-logo2, .logo2,
+.favorite-star:hover,
+.header-social div:hover,
+.favorite-star.favorited,
+.header-bar .header-logo
+	@extend .ts-shift-main
 
 .header-social div
-  @include recolor($color-subtle)
+	@extend .ts-shift-mute
 
-.header-search,
-#settings .settings-button,
-.room-search-input .mag-glass
-  opacity: 0.5
+// the random header nav
+#headerNav a
+	color: $main
+	font-weight: bold
 
+// the main header bar
+.header-bar
+	box-sizing: border-box
+	border-bottom: 2px solid $base-hover
+
+	// restructure for left align
+	.header-room
+		padding: 0 0 0 57px
+
+	.header-room-name
+		color: $text
+		text-shadow: none
+
+	.header-buttons
+		right: 0
+	.header-buttons > div
+		padding: 0 5px
+
+	.header-logo
+		width: 39px
+		height: 25px
+		padding: 2px 10px 0
+		@include ico-bg(38px, -540px)
+
+	.header-search
+		height: 24px
+		@include ico-bg(35px, -419px)
+
+	.settings-button
+		height: 22px
+		@include ico-bg(35px, -519px)
+
+// our volume slider
+#tsSlider
+	background: $main
+
+	&::-moz-range-thumb
+		background: $text
+
+	&::-webkit-slider-thumb
+		background: $text
+
+#tsMuted
+	color: $text-alt
+
+// room tabs
 .tab-item
-  @extend %border-y
+	box-shadow: none
+	box-sizing: border-box
+	border-bottom: 2px solid $base-hover
+	@extend .ts-content-mute
 
-  &:active,
-  &.selected 
-    .tab-title
-      font-weight: bold
-      text-shadow: none
-      color: $color-bg-0
-      margin: -1px 0 0 -1px    
+	.tab-icon
+		margin-top: -3px
+		margin-right: 2px
 
-    .tab-icon
-      @include recolor($color-bg-0)
-  
-  &:not(.selected) 
-    border-bottom-color: $color-bg-0
+	.chat-icon
+		@include ico-bg(40px, -239px)
+	.room-icon
+		@include ico-bg(40px, -200px)
+	.queue-icon
+		@include ico-bg(40px, -160px)
 
-    &:hover
-      background: $color-bg-2
+	.tab-title
+		margin-top: -3px
+		font-weight: bold
+		text-shadow: none
 
-    .tab-icon
-      @include recolor($color-subtle)
+	// selected vs not selected
+	&.selected
+		@extend .ts-content
+		border-color: $main
 
-    .tab-title
-      color: $color-subtle
+		.tab-icon
+			opacity: 1
+			@extend .ts-shift-main
+
+	&:not(.selected):hover
+		@extend .ts-content
+		border-color: $text-alt
+
+		.tab-icon
+			@extend .ts-shift-main
+			opacity: 0.75
+
+	&:not(.selected):not(:hover)
+		.tab-icon
+			@extend .ts-shift-mute
+			opacity: 0.75
