Minor panel restructure.

--- a/sass/global/_panels.sass
+++ b/sass/global/_panels.sass
@@ -25,6 +25,9 @@
   flex-wrap: wrap
   align-items: center
 
+#tsFull .ts-tabbed:not(.active)
+  display: none
+
 #tsPanel.active .ts_menu
   opacity: 1
   font-size: 21px
