Add quotes to background URL.

--- a/sass/_mixins.sass
+++ b/sass/_mixins.sass
@@ -21,7 +21,7 @@
 	
 @mixin tt-gear($size: 38px, $pos: -563px)
 	@include ico-bg($size, $pos)
-	background-image: url(https://s3.amazonaws.com/assets.turntable.fm/images/sprites/chrome-sprite@2x.png) !important
+	background-image: url('https://s3.amazonaws.com/assets.turntable.fm/images/sprites/chrome-sprite@2x.png') !important
 
 // unicode "icons"
 $cog: "⚙"
