--- a/sass/global/_global.sass
+++ b/sass/global/_global.sass
@@ -11,20 +11,20 @@
 
 // header structural changes
 // for attaching the panel
-.header-bar
+.chrome .header-bar
 	z-index: 1
 	font-size: 13px
 	line-height: 42px
 
-	.header-room
-		width: 100% !important
-		padding: 0 0 0 75px
-		
-	.header-room > div
-		position: initial !important
-		vertical-align: top !important
-		display: inline-block !important
-		margin: -2px 10px 0 0 !important
+.header-bar .header-room
+	width: 100% !important
+	padding: 0 0 0 75px
+	
+.header-bar .header-room > div
+	position: initial !important
+	vertical-align: top !important
+	display: inline-block !important
+	margin: -2px 10px 0 0 !important
 
 // style the "playlist counter"
 #playlist-display em
