--- a/sass/styles/base/_empty.sass
+++ b/sass/styles/base/_empty.sass
@@ -1,7 +1,7 @@
 body.th-none
   .tab-item:active,
   .tab-item.selected,
-  #tsPanel .ts-tab.active,
+  #turnStyles .ts-tab.active,
   .room-tab .flat-button:hover,
     background: $color !important
 
