Add timestamps to chat.

--- a/sass/global/_global.sass
+++ b/sass/global/_global.sass
@@ -9,6 +9,12 @@
 .chat .message.stat:not(:hover)
 	opacity: 0.5
 
+.chat .message .timestamp 
+	float: right
+	opacity: 0.75
+	margin-top: -1px
+	font-size: 11px
+
 // header structural changes
 // for attaching the panel
 .chrome .header-bar
